front/styles.css
/* ... */
.noti-ct{
  background-color: var(--custom-team-primary);
  animation: flash-ct 1.5s infinite;
}

@keyframes flash-ct {
  0%, 100% {
    background-color: var(--custom-team-primary);
    box-shadow: 0 0 8px var(--custom-team-primary);
  }
  50% {
    background-color: var(--white-general);
    box-shadow: 0 0 16px var(--white-general);
  }
}




.free-driver {
  background-color: var(--elements);
  border: 2px solid transparent;
  border-radius: 10px;
  padding:  5px 6px;
  cursor: grab !important;
  margin: 6px 5px;
  color: var(--text-general);
  transition: border-color 0.3s, color 0.3s, background-color 0.3s;
  position: relative;
  font-size: 15px;
  overflow: hidden;
  height: 36px;
  display: flex;
  gap: 3px;
  box-shadow: 0 0 10px 1px var(--box-shadow);
  backdrop-filter: blur(6px);
}

.free-driver:hover .bi-ban{
  color: var(--negative-text);
}

.bi-ban:hover{
  color: var(--negative-general);
  cursor: pointer;
}


.H2Hradio{
  border-bottom: 2px solid transparent;
  color: var( --text-general);
  background-color: transparent;
  transition: border-color 0.3s, color 0.3s, background-color 0.3s;
  height: 28px;
  font-size: 16px;
  padding: 0 3px;
  cursor: pointer;
  z-index: 100;
  position: relative;
}

.performance-graph-button{
  color: var( --text-general);
  background-color: transparent;
  height: 28px;
  font-size: 24px;
  padding: 0 3px;
  cursor: pointer;
  position: relative;
  transition: color 0.2s, transform 0.2s;
}

.performance-graph-button:hover{
  color: var(--text-selected);
  transform: scale(1.1);
}

.performance-graph-button.active{
  color: var(--new-primary);
}

.GraphButton{
  border-bottom: 2px solid transparent;
  color: var( --text-general);
  background-color: transparent;
  transition: border-color 0.3s, color 0.3s, background-color 0.3s;
  height: 28px;
  font-size: 16px;
  padding: 0 3px;
  cursor: pointer;
  z-index: 100;
  position: relative;
}

.buttons-drivers-modal{
  display: flex;
  gap: 4px;
}

.H2Hradio:hover{
  border-bottom: 2px solid var(--new-primary)
}

.GraphButton:hover{
  border-bottom: 2px solid var(--new-secondary)
}

.H2Hradio.activated{
  border-bottom: 2px solid var(--new-primary);
  color: var(--text-selected);
}

.GraphButton.activated{
  border-bottom: 2px solid var(--new-secondary);
  color: var(--text-selected-secondary);
}

.no-pointer{
  pointer-events: none;
}

.modal-dialog-lg{
  min-width: 1300px !important;
}

.modal-dialog-med{
  min-width: 900px !important;
}

.predict-footer{
  display: flex !important;
  justify-content: space-between !important;
}

.custom-bar{
  width: 350px;
  --bs-progress-bar-bg: var(--new-primary) !important;
}

.bar-and-indicator{
  opacity: 0;
  display: flex;
  align-items: center;
  gap: 6px;
}

.indicator{
  color: var(--new-primary);
}

.modal-driver{
  background-color: var(--elements);
  border-radius: 10px;
  padding: 8px;
  margin: 8px;
  color: var( --text-general);
  transition: border-color 0.3s, color 0.3s, background-color 0.3s;
  position: relative;
  font-size: 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-shadow: 0 0 10px 1px var(--box-shadow);
}

.modal-team{
  background-color: var(--elements);
  border-radius: 10px;
  padding: 2px 8px;
  margin: 8px;
  color: var( --text-general);
  transition: border-color 0.3s, color 0.3s, background-color 0.3s;
  position: relative;
  font-size: 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-shadow: 0 0 10px 1px var(--box-shadow);
}

.free-driver .custom-icon {
  color: transparent;
  transition: opacity 0.3s;
  width: 80px;
  opacity: 0;
  z-index: 3;
  display: flex;
  position: absolute;
  right: 6px;
  top: 5px;
  justify-content: flex-end;
}

.custom-icon i{
  transition: transform 0.3s, color 0.3s;
}



.standardlogo{
  width: 30px;
  height: 30px;
}


.custom-icon .bi-pencil-square {
  transition: color 0.3s;
}

.free-driver .bi-ban{
  opacity: 1 !important;
  transition: color 0.3s;
  color: var(--white-general);
  z-index: 10;
  position: absolute;
  right: 8px;
  cursor: pointer;
}

.free-driver .bi-ban:hover{
  color: var( --negative-general);
}

.custom-icon i:hover {
  color: var(--white-general);
  cursor: pointer;
}

.info-titles{
  color: var(--dark-text);
  font-size: 22px;
  cursor: pointer;
  transition: color 0.3s;
}

.info-titles:hover{
  color: var(--new-primary);
}


.free-driver:hover .custom-icon {
  opacity: 1;
}

#free-drivers .free-driver:hover .custom-icon i, #free-staff .free-driver:hover .custom-icon i{
  color: var(--text-general);
}

#free-drivers .free-driver:hover .custom-icon i:hover, #free-staff .free-driver:hover .custom-icon i:hover{
  transform: scale(1.05);
}

#free-drivers, #free-staff {
  overflow-y: scroll;
}


.free-driver:hover {
  cursor: grab !important;
  background-color: var(--table-hover);
}

.modal-driver:hover, .modal-team:hover{
  cursor: default;
}

.modal-team.ferrari:hover{
  color: var(--ferrari-primary);
}

.modal-team.redbull:hover{
  color: var(--redbull-primary);
}

.modal-team.mclaren:hover{
  color: var(--mclaren-primary);
}

.modal-team.merc:hover{
  color: var(--mercedes-primary);
}

.modal-team.alpine:hover{
  color: var(--alpine-primary);
}

.modal-team.williams:hover{
  color: var(--williams-primary);
}

.modal-team.haas:hover{
  color: var(--haas-primary);
}

.modal-team.alpha:hover{
  color: var(--alphatauri-primary);
}

.modal-team.alfa:hover{
  color: var(--alfa-primary);
}

.modal-team.aston:hover{
  color: var(--aston-primary);
} 

.blocking-div {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 100;
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--white-general);
  flex-direction: column;
  justify-content: center;
  background-color: var(--background);
}

.splash-text{
  color: var(--dark-text);
  display: flex;
  justify-content: center;
}

.splash-logo{
  height: 370px;
  margin-bottom: 30px;
}
/* ... */

